Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108194

FAIL! : data::tst_simulation-behavior::compile() module "Simu" is not installed

    XMLWordPrintable

Details

    • 10372c074b (qt/qtbase/dev) 10372c074b (qt/tqtc-qtbase/dev) f71c4df4b2 (qt/qtbase/6.4) f71c4df4b2 (qt/tqtc-qtbase/6.4), 8ab7c09fb (tqtc/lts-6.2)

    Description

       2820: ********* Start testing of data *********
       FAIL!  : data::tst_simulation-behavior::compile() module "Simu" is not installed
          Loc: [qrc:/data/tst_simulation-behavior.qml(6)]
       Totals: 0 passed, 1 failed, 0 skipped, 0 blacklisted, 5ms
      

      The test: "tst_simulation-behavior::tst_simulation-behavior::compile" has failed.
      You can find more information on its history by following the link below.
      https://testresults.qt.io/grafana/d/3dhio4K7k/fastcheck?var-testCase=tst_simulation-behavior&var-testFunction=tst_simulation-behavior::compile

      Build log: https://testresults.qt.io/logs/qt/qtinterfaceframework/f8ddda4ca09a88be8e5ff91655685cb1f038eaea/LinuxRHEL_8_4x86_64AndroidAndroid_ANYx86GCCqtci-linux-RHEL-8.4-x86_64-50-e52d4aAndroidTestRun_Sccache_UseConfigure/648f94f077158060032ac1892819d5350763b15b/test_1679356573/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtinterfaceframework/tasks/1679356555

      Tested changes (refs/builds/qtci/dev/1667520711):
      https://codereview.qt-project.org/c/qt/qtinterfaceframework/+/441622/2 Update dependencies on 'dev' in qt/qtinterfaceframework

      Attachments

        For Gerrit Dashboard: QTBUG-108194
        # Subject Branch Project Status CR V

        Activity

          People

            semlanik Alexey Edelev
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes