src/tools/androiddeployqt/main.cpp
@@ -228,7 +228,7 @@ static const QHash<QByteArray, QByteArray> elfArchitectures = {
 
 bool goodToCopy(const Options *options, const QString &file, QStringList *unmetDependencies);
 bool checkCanImportFromRootPaths(const Options *options, const QString &absolutePath,
-                                 const QUrl &moduleUrl);
+                                 const QString &moduleUrl);
 bool readDependenciesFromElf(Options *options, const QString &fileName,
                              QSet<QString> *usedDependencies, QSet<QString> *remainingDependencies);
 
@@ -2076,7 +2076,8 @@ bool scanImports(Options *options, QSet<QString> *usedDependencies)
 
             const QUrl url(object.value("name"_L1).toString());
 
-            if (checkCanImportFromRootPaths(options, info.absolutePath(), url)) {
+            const QString moduleUrlPath = u"/"_s + url.toString().replace(u'.', u'/');
+            if (checkCanImportFromRootPaths(options, info.absolutePath(), moduleUrlPath)) {
                 if (options->verbose)
                     fprintf(stdout, "    -- Skipping because path is in QML root path.\n");
                 continue;
@@ -2084,13 +2085,8 @@ bool scanImports(Options *options, QSet<QString> *usedDependencies)
 
             QString importPathOfThisImport;
             for (const QString &importPath : std::as_const(importPaths)) {
-#if defined(Q_OS_WIN32)
-                Qt::CaseSensitivity caseSensitivity = Qt::CaseInsensitive;
-#else
-                Qt::CaseSensitivity caseSensitivity = Qt::CaseSensitive;
-#endif
                 QString cleanImportPath = QDir::cleanPath(importPath);
-                if (info.absoluteFilePath().startsWith(cleanImportPath, caseSensitivity)) {
+                if (QFile::exists(cleanImportPath + moduleUrlPath)) {
                     importPathOfThisImport = importPath;
                     break;
                 }
@@ -2169,11 +2165,10 @@ bool scanImports(Options *options, QSet<QString> *usedDependencies)
 }
 
 bool checkCanImportFromRootPaths(const Options *options, const QString &absolutePath,
-                                 const QUrl &moduleUrl)
+                                 const QString &moduleUrlPath)
 {
-    const QString pathFromUrl = u"/"_s + moduleUrl.toString().replace(u'.', u'/');
     for (auto rootPath : options->rootPaths) {
-        if ((rootPath + pathFromUrl) == absolutePath)
+        if ((rootPath + moduleUrlPath) == absolutePath)
             return true;
     }
     return false;
